plugins {
	id 'org.springframework.boot' version '2.3.5.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'com.devpedia'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.elasticsearch:elasticsearch:7.10.1'
	implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.10.1'
	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.10.1'

	implementation 'net.logstash.logback:logstash-logback-encoder:6.5'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'org.apache.httpcomponents:httpclient:4.5.9'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
	implementation 'org.apache.commons:commons-lang3:3.9'

	implementation 'io.springfox:springfox-swagger2:2.9.2'
	implementation 'io.springfox:springfox-swagger-ui:2.9.2'

	implementation 'org.elasticsearch:elasticsearch:7.10.1'
	implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.10.1'
	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.10.1'
	implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
	implementation 'com.amazonaws:aws-java-sdk-s3'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	testCompile('com.h2database:h2')

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'
}

test {
	useJUnitPlatform()
}
